<resources>
    <string name="app_name">ChatApp</string>

    <string name="title">Login to app</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="ready">If you already have an account</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="dontReady">I dont have an account</string>
    <string name="email">Your Email</string>
    <string name="name">Your Full Name</string>
    <string name="password">Your Password</string>
    <string name="ready_up">to get started with the app</string>
    <string name="dontready_up">I already have an account</string>

</resources>